fixed switches alignment problems

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,12 +34,14 @@ body {
 }
 
 .home:hover {
-    text-decoration: underline;
+    text-decoration-line: underline;
 }
 
 .scores:hover {
     text-decoration: underline;
 }
+
+
 
 /* Hamburger Button */
 .btn-color{
@@ -74,6 +76,7 @@ body {
 }
 
 .toggle:active {
+
   transform: translateY(4px);
 }
 
@@ -107,24 +110,26 @@ body {
 
 
 .text2 {
-  position: absolute;
-  margin-left: 92px;
-  margin-top: 200px;
+  margin-left: 170px;
+  margin-top: 80px;
   color: #1291CF;
   font-weight: 900;
+  font-size: 1.4em;
 }
 
 .text1 {
-  position: absolute;
-  margin-left: 40px;
-  margin-top: 152px;
+  
+  margin-left: 68px;
+  margin-top: 120px;
   color: #1291CF;
-  font-weight: 900;
+  text-transform: uppercase;
+  font-size: 1.6em;
 }
 
 
 .text1 span:last-child {
   padding-left: 100px;
+  margin-left: 80px;
 }
 
 #title {
@@ -133,7 +138,7 @@ body {
   position: absolute;
   font-size: 65px;
   margin-left: 35px;
-  margin-top: 40px;
+  margin-top: 10px;
   color: #1291CF;
 }
 
@@ -142,14 +147,14 @@ body {
   background: #330000;
   color: #ff0000;
   font-family: 'Big Shoulders Stencil Display', cursive;
-  font-size: 20px;
-  height: 30px;
-  width: 50px;
-  margin-left: 92px;
-  margin-top: 175px;
+  font-size: 30px;
+  height: 60px;
+  width: 70px;
+  margin-left: 162px;
+  margin-top: 5px;
   text-align: center;
   vertical-align: middle;
-  line-height: 30px;
+  line-height: 60px;
 }
 
 
